--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -21,6 +21,18 @@
   }
 }
 
+.top-drawer {
+  position: fixed !important;
+  top: 0;
+  width: 100vw !important;
+  margin-top: var(--header-height);
+  min-height: calc(100vh - var(--header-height));
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+}
+
 @media screen and (min-width: 1280px) {
   /* CSS property not allowed in media queries */
   .page-content {
