--- a/frontend/src/assets/css/base.css
+++ b/frontend/src/assets/css/base.css
@@ -3,6 +3,34 @@ The color palette comes from PrimeVue
 https://primevue.org/theming/styled/#colors
 */
 
+@font-face {
+  font-family: Mount;
+  src: url("/fonts/Mont_Regular.woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Mount;
+  src: url("/fonts/Mont_Regular_Italic.woff2");
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: Mount;
+  src: url("/fonts/Mont_Bold.woff2");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Mount;
+  src: url("/fonts/Mont_Bold_Italic.woff2");
+  font-weight: bold;
+  font-style: italic;
+}
+
 /* semantic color variables for this project */
 :root {
   --color-background: white;
@@ -11,11 +39,14 @@ https://primevue.org/theming/styled/#colors
   --color-text: var(--p-neutral-950);
   --color-link: var(--c-indigo);
   --color-background-component: white;
+  --color-target: var(--p-yellow-500);
 
   --container-width: 1280px;
+  --small-container-width: 1080px;
   --header-height: 50px;
   --font-size: 14px;
   font-size: var(--font-size);
+
 }
 
 /* DARK MODE */
@@ -39,6 +70,7 @@ https://primevue.org/theming/styled/#colors
   box-sizing: border-box;
   margin: 0;
   font-weight: inherit;
+  scroll-margin-top: var(--header-height);
 }
 
 body {
@@ -47,16 +79,13 @@ body {
   background: var(--color-background);
   line-height: 1.6;
   font-family:
-    Inter,
+    Verdana,
     -apple-system,
     BlinkMacSystemFont,
-    "Segoe UI",
     Roboto,
     Oxygen,
     Ubuntu,
     Cantarell,
-    "Fira Sans",
-    "Droid Sans",
     "Helvetica Neue",
     sans-serif;
   text-rendering: optimizeLegibility;
