--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -124,3 +124,11 @@ h1, h2, h3, h4, h5, h6 {
 p {
   margin: 5px 0;
 }
+
+.color-success {
+  color: var(--color-success);
+}
+
+.color-error {
+  color: var(--color-error);
+}
