Beginning work on Home page

--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -20,8 +20,8 @@
 
   .regular-content {
     width: 100%;
-    padding: 2rem;
-    background-color: var(--color-background-component);
+    padding: 1rem;
+    /* background-color: var(--color-background-component); */
     border-radius: 10px;
     display: inline-block;
   }
