--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -111,7 +111,7 @@ h2, h3, h4, h5, h6 {
   border-radius: 4px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, .as-heading {
   font-family: 
     Mount,
     Verdana,
