Other home view changes

--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -111,6 +111,10 @@ h2, h3, h4, h5, h6 {
   color: var(--color-heading);
   font-weight: 700;
   border-radius: 4px;
+
+  & a {
+    color: var(--color-heading);
+  }
 }
 
 h1, h2, h3, h4, h5, h6, .as-heading {
