Update various contents and favicons

--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -130,8 +130,13 @@ h1, h2, h3, h4, h5, h6, .as-heading {
     "Helvetica Neue",
     sans-serif;
 
+  &.targeted,
   &:target {
-    outline: 2px solid var(--color-target);
+    background-color: var(--p-primary-50);
+    border-bottom: 2px solid var(--color-target);
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    /* outline: 2px solid var(--color-target); */
     padding-left: 2px;
   }
 }
